{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 489,
  "lineage": "da90056f-0c91-cd14-f83e-358437a0de42",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "fw_backup_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08d8d4f970b2cd29c",
            "arn": "arn:aws:ec2:us-east-2:461485115270:elastic-ip/eipalloc-08d8d4f970b2cd29c",
            "association_id": "eipassoc-075031ad0399e132c",
            "domain": "vpc",
            "id": "eipalloc-08d8d4f970b2cd29c",
            "instance": "i-0e77046d3115a60f7",
            "network_border_group": "us-east-2",
            "network_interface": "eni-088387a8fa0086fce",
            "private_dns": "ip-172-31-101-155.us-east-2.compute.internal",
            "private_ip": "172.31.101.155",
            "public_dns": "ec2-3-128-5-57.us-east-2.compute.amazonaws.com",
            "public_ip": "3.128.5.57",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Name": "nathanstacey-fw-backup-eip",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "tags_all": {
              "Name": "nathanstacey-fw-backup-eip",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "fw_primary_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06de113235659a1dd",
            "arn": "arn:aws:ec2:us-east-2:461485115270:elastic-ip/eipalloc-06de113235659a1dd",
            "association_id": "eipassoc-05aaeabd698a82a64",
            "domain": "vpc",
            "id": "eipalloc-06de113235659a1dd",
            "instance": "i-0da4126f523970585",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0770b011a6ec95745",
            "private_dns": "ip-172-31-101-47.us-east-2.compute.internal",
            "private_ip": "172.31.101.47",
            "public_dns": "ec2-3-137-3-144.us-east-2.compute.amazonaws.com",
            "public_ip": "3.137.3.144",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Name": "nathanstacey-fw-primary-eip",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "tags_all": {
              "Name": "nathanstacey-fw-primary-eip",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "firewall_backup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f5fcdfbd140e4ab7",
            "arn": "arn:aws:ec2:us-east-2:461485115270:instance/i-0e77046d3115a60f7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e77046d3115a60f7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "lab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-088387a8fa0086fce"
              }
            ],
            "primary_network_interface_id": "eni-088387a8fa0086fce",
            "private_dns": "ip-172-31-101-155.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.101.155",
            "public_dns": "ec2-3-128-5-57.us-east-2.compute.amazonaws.com",
            "public_ip": "3.128.5.57",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05e524c5b6bd875db",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "nathanstacey-firewall-sg"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-001dd742da6c18ffa",
            "tags": {
              "Name": "nathanstacey-firewall-backup-lab",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "tags_all": {
              "Name": "nathanstacey-firewall-backup-lab",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d1a49aa30aaffd4d"
            ]
          },
          "dependencies": [
            "aws_key_pair.lab_key",
            "aws_security_group.firewall_sg",
            "aws_subnet.firewall",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "firewall_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f5fcdfbd140e4ab7",
            "arn": "arn:aws:ec2:us-east-2:461485115270:instance/i-0da4126f523970585",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0da4126f523970585",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "lab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0770b011a6ec95745"
              }
            ],
            "primary_network_interface_id": "eni-0770b011a6ec95745",
            "private_dns": "ip-172-31-101-47.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.101.47",
            "public_dns": "ec2-3-137-3-144.us-east-2.compute.amazonaws.com",
            "public_ip": "3.137.3.144",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08ba8c27cca29b42c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "nathanstacey-firewall-sg"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-001dd742da6c18ffa",
            "tags": {
              "Name": "nathanstacey-firewall-primary-lab",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "tags_all": {
              "Name": "nathanstacey-firewall-primary-lab",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d1a49aa30aaffd4d"
            ]
          },
          "dependencies": [
            "aws_key_pair.lab_key",
            "aws_security_group.firewall_sg",
            "aws_subnet.firewall",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f5fcdfbd140e4ab7",
            "arn": "arn:aws:ec2:us-east-2:461485115270:instance/i-0d111a740971b243d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d111a740971b243d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "lab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c1542ce203abe122"
              }
            ],
            "primary_network_interface_id": "eni-0c1542ce203abe122",
            "private_dns": "ip-172-31-102-41.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.102.41",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a1bdfd967f733bd7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "nathanstacey-server1-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06e60b599d84f7aa0",
            "tags": {
              "Name": "nathanstacey-server1-lab",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "tags_all": {
              "Name": "nathanstacey-server1-lab",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-063d110dcfa405e29"
            ]
          },
          "dependencies": [
            "aws_key_pair.lab_key",
            "aws_security_group.firewall_sg",
            "aws_security_group.server1_sg",
            "aws_subnet.server1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f5fcdfbd140e4ab7",
            "arn": "arn:aws:ec2:us-east-2:461485115270:instance/i-0b604aa61a69237d8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b604aa61a69237d8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "lab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e8704383d6230042"
              }
            ],
            "primary_network_interface_id": "eni-0e8704383d6230042",
            "private_dns": "ip-172-31-100-184.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.100.184",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cba23edc4615cad6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "nathanstacey-server2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03975d74d11fdf404",
            "tags": {
              "Name": "nathanstacey-server2-lab",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "tags_all": {
              "Name": "nathanstacey-server2-lab",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-059e4c2361330d573"
            ]
          },
          "dependencies": [
            "aws_key_pair.lab_key",
            "aws_security_group.server2_sg",
            "aws_subnet.client",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:461485115270:internet-gateway/igw-4719842e",
            "id": "igw-4719842e",
            "owner_id": "461485115270",
            "region": "us-east-2",
            "tags": {
              "Name": "nathanstacey-igw",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "tags_all": {
              "Name": "nathanstacey-igw",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "vpc_id": "vpc-773e7e1e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "fw_backup_lan_eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:461485115270:network-interface/eni-0524c75b16a20454b",
            "attachment": [
              {
                "attachment_id": "eni-attach-01183f9c18a7ecda6",
                "device_index": 2,
                "instance": "i-0e77046d3115a60f7",
                "network_card_index": 0
              }
            ],
            "id": "eni-0524c75b16a20454b",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:20:5e:22:42:33",
            "owner_id": "461485115270",
            "private_dns_name": "ip-172-31-101-21.us-east-2.compute.internal",
            "private_ip": "172.31.101.21",
            "private_ip_list": [
              "172.31.101.21"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.31.101.21"
            ],
            "private_ips_count": 0,
            "region": "us-east-2",
            "security_groups": [
              "sg-0d1a49aa30aaffd4d"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-001dd742da6c18ffa",
            "tags": {
              "Name": "nathanstacey-fw-backup-lan-eni",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "tags_all": {
              "Name": "nathanstacey-fw-backup-lan-eni",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            }
          },
          "dependencies": [
            "aws_security_group.firewall_sg",
            "aws_subnet.firewall",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "fw_backup_wan_eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:461485115270:network-interface/eni-0e2b9e63d173f2793",
            "attachment": [
              {
                "attachment_id": "eni-attach-0a0275e5082ceae7b",
                "device_index": 1,
                "instance": "i-0e77046d3115a60f7",
                "network_card_index": 0
              }
            ],
            "id": "eni-0e2b9e63d173f2793",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:6f:cb:69:ea:2d",
            "owner_id": "461485115270",
            "private_dns_name": "ip-172-31-103-11.us-east-2.compute.internal",
            "private_ip": "172.31.103.11",
            "private_ip_list": [
              "172.31.103.11"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.31.103.11"
            ],
            "private_ips_count": 0,
            "region": "us-east-2",
            "security_groups": [
              "sg-0e983b4f11f7adbd9"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-096bbf70092b5cd4d",
            "tags": {
              "Name": "fw-backup-wan-eni"
            },
            "tags_all": {
              "Name": "fw-backup-wan-eni"
            }
          },
          "dependencies": [
            "aws_security_group.firewall_wan_sg",
            "aws_subnet.public_wan",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "fw_primary_lan_eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:461485115270:network-interface/eni-0c2a2fc61bcb13321",
            "attachment": [
              {
                "attachment_id": "eni-attach-0085e7a84a2d6f9fb",
                "device_index": 2,
                "instance": "i-0da4126f523970585",
                "network_card_index": 0
              }
            ],
            "id": "eni-0c2a2fc61bcb13321",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:5f:26:93:6f:8b",
            "owner_id": "461485115270",
            "private_dns_name": "ip-172-31-101-11.us-east-2.compute.internal",
            "private_ip": "172.31.101.11",
            "private_ip_list": [
              "172.31.101.11"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.31.101.11"
            ],
            "private_ips_count": 0,
            "region": "us-east-2",
            "security_groups": [
              "sg-0d1a49aa30aaffd4d"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-001dd742da6c18ffa",
            "tags": {
              "Name": "nathanstacey-fw-primary-lan-eni",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "tags_all": {
              "Name": "nathanstacey-fw-primary-lan-eni",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            }
          },
          "dependencies": [
            "aws_security_group.firewall_sg",
            "aws_subnet.firewall",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "fw_primary_wan_eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:461485115270:network-interface/eni-0b8d2208bb6592930",
            "attachment": [
              {
                "attachment_id": "eni-attach-0480d0e3445ce9779",
                "device_index": 1,
                "instance": "i-0da4126f523970585",
                "network_card_index": 0
              }
            ],
            "id": "eni-0b8d2208bb6592930",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:cf:52:7a:4a:6d",
            "owner_id": "461485115270",
            "private_dns_name": "ip-172-31-103-10.us-east-2.compute.internal",
            "private_ip": "172.31.103.10",
            "private_ip_list": [
              "172.31.103.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.31.103.10"
            ],
            "private_ips_count": 0,
            "region": "us-east-2",
            "security_groups": [
              "sg-0e983b4f11f7adbd9"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-096bbf70092b5cd4d",
            "tags": {
              "Name": "fw-primary-wan-eni"
            },
            "tags_all": {
              "Name": "fw-primary-wan-eni"
            }
          },
          "dependencies": [
            "aws_security_group.firewall_wan_sg",
            "aws_subnet.public_wan",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "client_default_via_fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a8c792a862b845e21080289494",
            "instance_id": "i-0da4126f523970585",
            "instance_owner_id": "461485115270",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0b8d2208bb6592930",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-0a8c792a862b845e2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_interface.fw_primary_wan_eni",
            "aws_route_table.client_rt",
            "aws_security_group.firewall_wan_sg",
            "aws_subnet.public_wan",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "client_to_server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.102.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a8c792a862b845e21602405064",
            "instance_id": "i-0da4126f523970585",
            "instance_owner_id": "461485115270",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0c2a2fc61bcb13321",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-0a8c792a862b845e2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_interface.fw_primary_lan_eni",
            "aws_route_table.client_rt",
            "aws_security_group.firewall_sg",
            "aws_subnet.firewall",
            "aws_subnet.server1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "firewall_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-4719842e",
            "id": "r-rtb-0537b3b16dddc7c171080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-0537b3b16dddc7c17",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.firewall_rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "server1_default_via_fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00639bcbb2f0229301080289494",
            "instance_id": "i-0da4126f523970585",
            "instance_owner_id": "461485115270",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0b8d2208bb6592930",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-00639bcbb2f022930",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_interface.fw_primary_wan_eni",
            "aws_route_table.server1_rt",
            "aws_security_group.firewall_wan_sg",
            "aws_subnet.public_wan",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "server1_to_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.100.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00639bcbb2f022930306865091",
            "instance_id": "i-0da4126f523970585",
            "instance_owner_id": "461485115270",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0c2a2fc61bcb13321",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-00639bcbb2f022930",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_interface.fw_primary_lan_eni",
            "aws_route_table.server1_rt",
            "aws_security_group.firewall_sg",
            "aws_subnet.client",
            "aws_subnet.firewall",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "client_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:461485115270:route-table/rtb-0a8c792a862b845e2",
            "id": "rtb-0a8c792a862b845e2",
            "owner_id": "461485115270",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0b8d2208bb6592930",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.31.102.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0c2a2fc61bcb13321",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nathanstacey-client-rt",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "tags_all": {
              "Name": "nathanstacey-client-rt",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "timeouts": null,
            "vpc_id": "vpc-773e7e1e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "firewall_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:461485115270:route-table/rtb-0537b3b16dddc7c17",
            "id": "rtb-0537b3b16dddc7c17",
            "owner_id": "461485115270",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-4719842e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nathanstacey-firewall-rt",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "tags_all": {
              "Name": "nathanstacey-firewall-rt",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "timeouts": null,
            "vpc_id": "vpc-773e7e1e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "server1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:461485115270:route-table/rtb-00639bcbb2f022930",
            "id": "rtb-00639bcbb2f022930",
            "owner_id": "461485115270",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0b8d2208bb6592930",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.31.100.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0c2a2fc61bcb13321",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nathanstacey-server1-rt",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "tags_all": {
              "Name": "nathanstacey-server1-rt",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "timeouts": null,
            "vpc_id": "vpc-773e7e1e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "client_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f24a797ee1f17e42",
            "region": "us-east-2",
            "route_table_id": "rtb-0a8c792a862b845e2",
            "subnet_id": "subnet-03975d74d11fdf404"
          },
          "dependencies": [
            "aws_route_table.client_rt",
            "aws_subnet.client",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "firewall_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df0a015578dbb400",
            "region": "us-east-2",
            "route_table_id": "rtb-0537b3b16dddc7c17",
            "subnet_id": "subnet-001dd742da6c18ffa"
          },
          "dependencies": [
            "aws_route_table.firewall_rt",
            "aws_subnet.firewall",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "server1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0779e6aa32a0278a8",
            "region": "us-east-2",
            "route_table_id": "rtb-00639bcbb2f022930",
            "subnet_id": "subnet-06e60b599d84f7aa0"
          },
          "dependencies": [
            "aws_route_table.server1_rt",
            "aws_subnet.server1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "firewall_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:461485115270:security-group/sg-0d1a49aa30aaffd4d",
            "description": "SG for UFW firewalls",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1a49aa30aaffd4d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "nathanstacey-firewall-sg",
            "name_prefix": "",
            "owner_id": "461485115270",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nathanstacey-firewall-sg-lab",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "tags_all": {
              "Name": "nathanstacey-firewall-sg-lab",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "timeouts": null,
            "vpc_id": "vpc-773e7e1e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "firewall_wan_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:461485115270:security-group/sg-0e983b4f11f7adbd9",
            "description": "Firewall WAN SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e983b4f11f7adbd9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "nathanstacey-firewall-wan-sg",
            "name_prefix": "",
            "owner_id": "461485115270",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nathanstacey-firewall-wan-sg-lab",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "tags_all": {
              "Name": "nathanstacey-firewall-wan-sg-lab",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "timeouts": null,
            "vpc_id": "vpc-773e7e1e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server1_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:461485115270:security-group/sg-063d110dcfa405e29",
            "description": "SG for FTP Server1",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063d110dcfa405e29",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 21,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 21
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 40000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0d1a49aa30aaffd4d"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "nathanstacey-server1-sg",
            "name_prefix": "",
            "owner_id": "461485115270",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nathanstacey-server1-sg-lab",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "tags_all": {
              "Name": "nathanstacey-server1-sg-lab",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "timeouts": null,
            "vpc_id": "vpc-773e7e1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.firewall_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:461485115270:security-group/sg-059e4c2361330d573",
            "description": "SG for Client Downloader Server2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-059e4c2361330d573",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nathanstacey-server2-sg",
            "name_prefix": "",
            "owner_id": "461485115270",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nathanstacey-server2-sg-lab",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "tags_all": {
              "Name": "nathanstacey-server2-sg-lab",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "timeouts": null,
            "vpc_id": "vpc-773e7e1e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:461485115270:subnet/subnet-03975d74d11fdf404",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03975d74d11fdf404",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "461485115270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "nathanstacey-client-subnet-lab",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "tags_all": {
              "Name": "nathanstacey-client-subnet-lab",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "vpc_id": "vpc-773e7e1e"
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:461485115270:subnet/subnet-001dd742da6c18ffa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001dd742da6c18ffa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "461485115270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "nathanstacey-firewall-subnet-lab",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "tags_all": {
              "Name": "nathanstacey-firewall-subnet-lab",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "vpc_id": "vpc-773e7e1e"
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_wan",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:461485115270:subnet/subnet-096bbf70092b5cd4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096bbf70092b5cd4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "461485115270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "nathanstacey-public-wan-subnet",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "tags_all": {
              "Name": "nathanstacey-public-wan-subnet",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "vpc_id": "vpc-773e7e1e"
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:461485115270:subnet/subnet-06e60b599d84f7aa0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e60b599d84f7aa0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "461485115270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "nathanstacey-server1-subnet-lab",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "tags_all": {
              "Name": "nathanstacey-server1-subnet-lab",
              "division": "field",
              "org": "sa",
              "project": "nathanstacey firewallproject",
              "team": "pubsec"
            },
            "vpc_id": "vpc-773e7e1e"
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}